VSCodeのTaskにテンプレートファイルコピー用のcptmplを追加

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,14 @@
             "problemMatcher": [
                 "$go"
             ]
+        },
+        {
+            "label": "cptmpl",
+            "type": "shell",
+            "command": "cp ${workspaceFolder}/template.go ${cwd}/main.go",
+            "options": {
+            },
+            "problemMatcher": []
         }
     ]
 }
